Add run matrix for days

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,5 +28,26 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+  
+  execute-days:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        day: [1, 2]
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --no-restore
+    - name: Execute
+      # Run project AOC2023 with command line parameter of matrix
+      run: dotnet run --project AOC2023 -- ${{ matrix.day }}
 
     
