--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build Release
       run: dotnet build --no-restore -c Release
     - name: Pack TAR with build
-      run: tar -czvf linux-build.tar.gz AOC2023/bin/Release/net8.0
+      run: tar -czvf linux-build.tar.gz -C AOC2023/bin/Release/net8.0 .
     - uses: actions/upload-artifact@v3
       with:
         name: linux-build
