--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ env:
   DOTNET_VERSION: 8.0.x
 
 jobs:
-  build:
+  build-native:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -34,7 +34,6 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: build
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -48,9 +47,9 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
       
-  execute-all:
+  native-all:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-native
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -67,9 +66,9 @@ jobs:
       working-directory: runtime
       run: ./AOC2023 all
 
-  execute-single:
+  native-single:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-native
     strategy:
       matrix:
         day: [1, 2]
