--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,12 +13,18 @@ permissions:
     contents: read
     pages: write
     id-token: write
-  
+
+concurrency:
+    group: "pages"
+    cancel-in-progress: false
+
 jobs:
-    deploy-to-pages:
+    build:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v3
+        - name: Setup Pages
+          uses: actions/configure-pages@v3
         - name: Setup .NET
           uses: actions/setup-dotnet@v3
           with:
@@ -33,3 +39,15 @@ jobs:
           uses: actions/upload-pages-artifact@v2
           with:
             path: "deploy/wwwroot" 
+    
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        environment: 
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+        steps:
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v2
+        
