--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
     - name: Restore dependencies
-      run: dotnet restore AOC2023
-    - name: Build Native
-      run: dotnet publish AOC2023 --no-restore -c Release -o deploy --nologo
+      run: dotnet restore AOC2023.Cli
+    - name: Build CLI
+      run: dotnet publish AOC2023.Cli --no-restore -c Release -o deploy --nologo
     - name: Pack TAR with build
       run: tar -czvf linux-build.tar.gz -C deploy .
     - uses: actions/upload-artifact@v3
@@ -59,7 +59,7 @@ jobs:
       run: mkdir runtime && tar -xzvf linux-build.tar.gz -C runtime
     - name: Execute
       working-directory: runtime
-      run: ./AOC2023 all
+      run: ./aoc2023 all
 
   native-single:
     runs-on: ubuntu-latest
@@ -77,4 +77,4 @@ jobs:
       run: mkdir runtime && tar -xzvf linux-build.tar.gz -C runtime
     - name: Execute
       working-directory: runtime
-      run: ./AOC2023 ${{ matrix.day }}
+      run: ./aoc2023 ${{ matrix.day }}
