--- a/AOC2023.Tests/AOC2023.Tests.csproj
+++ b/AOC2023.Tests/AOC2023.Tests.csproj
@@ -17,7 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AOC2023\AOC2023.csproj" />
+    <ProjectReference Include="..\AOC2023.Files\AOC2023.Files.csproj" />
+    <ProjectReference Include="..\AOC2023.Logic\AOC2023.Logic.csproj" />
   </ItemGroup>
 
 </Project>
