Add runtime identifiers for native publishing

--- a/AOC2023.Cli/AOC2023.Cli.csproj
+++ b/AOC2023.Cli/AOC2023.Cli.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PublishAot>true</PublishAot>
+		<RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
 		<AssemblyName>aoc2023</AssemblyName>
 	</PropertyGroup>
 
