Move files to reflect new folder structure

--- a/src/apps/AOC2023.Cli/AOC2023.Cli.csproj
+++ b/src/apps/AOC2023.Cli/AOC2023.Cli.csproj
@@ -11,8 +11,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AOC2023.Files\AOC2023.Files.csproj" />
-		<ProjectReference Include="..\AOC2023.Logic\AOC2023.Logic.csproj" />
+		<ProjectReference Include="..\..\libs\AOC2023.Files\AOC2023.Files.csproj" />
+		<ProjectReference Include="..\..\libs\AOC2023.Logic\AOC2023.Logic.csproj" />
 	</ItemGroup>
 
 </Project>
