Build first draft of web user interface

--- a/src/apps/AOC2023.WebApp/AOC2023.WebApp.csproj
+++ b/src/apps/AOC2023.WebApp/AOC2023.WebApp.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\libs\AOC2023.Logic\AOC2023.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
