Don't use AOT for now

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,7 +34,7 @@ jobs:
         - name: Restore dependencies
           run: dotnet restore src/apps/AOC2023.WebApp
         - name: Build 
-          run: dotnet publish src/apps/AOC2023.WebApp -p:RunAOTCompilation=true --no-restore -c Release -o deploy --nologo 
+          run: dotnet publish src/apps/AOC2023.WebApp --no-restore -c Release -o deploy --nologo 
         - name: Upload web application
           uses: actions/upload-pages-artifact@v2
           with:
