Day 3: Gear Ratios

--- a/src/libs/AOC2023.Files/AOC2023.Files.csproj
+++ b/src/libs/AOC2023.Files/AOC2023.Files.csproj
@@ -22,6 +22,16 @@
     <None Update="Inputs\02\input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Inputs\03\example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Inputs\03\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Inputs\03\" />
   </ItemGroup>
 
 </Project>
