Day 5: If You Give A Seed A Fertilizer

--- a/src/libs/AOC2023.Files/AOC2023.Files.csproj
+++ b/src/libs/AOC2023.Files/AOC2023.Files.csproj
@@ -34,10 +34,17 @@
     <None Update="Inputs\04\input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Inputs\05\example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Inputs\05\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Inputs\03\" />
+    <Folder Include="Inputs\05\" />
   </ItemGroup>
 
 </Project>
