Day 8: Haunted Wasteland

--- a/src/libs/AOC2023.Files/AOC2023.Files.csproj
+++ b/src/libs/AOC2023.Files/AOC2023.Files.csproj
@@ -52,6 +52,15 @@
     <None Update="Inputs\07\input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Inputs\08\example1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Inputs\08\example2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Inputs\08\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
