--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,7 +51,7 @@ jobs:
     needs: build-native
     strategy:
       matrix:
-        day: [1, 2, 3, 4, 5, 6, 7]
+        day: [1, 2, 3, 4, 5, 6, 7, 8]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
