Day 9: Mirage Maintenance

--- a/src/libs/AOC2023.Files/AOC2023.Files.csproj
+++ b/src/libs/AOC2023.Files/AOC2023.Files.csproj
@@ -61,6 +61,12 @@
     <None Update="Inputs\08\input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Inputs\09\example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Inputs\09\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
