--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,6 +6,8 @@ name: Build & Run
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   workflow_dispatch:
 
 env:
@@ -51,7 +53,7 @@ jobs:
     needs: build-native
     strategy:
       matrix:
-        day: [1, 2, 3, 4, 5, 6, 7, 8]
+        day: [1, 2, 3, 4, 5, 6, 7, 8, 9]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
