Day 10: Pipe Maze

--- a/src/libs/AOC2023.Files/AOC2023.Files.csproj
+++ b/src/libs/AOC2023.Files/AOC2023.Files.csproj
@@ -67,12 +67,16 @@
     <None Update="Inputs\09\input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Inputs\10\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Inputs\03\" />
     <Folder Include="Inputs\05\" />
     <Folder Include="Inputs\06\" />
+    <Folder Include="Inputs\10\" />
   </ItemGroup>
 
 </Project>
